# Forked from sp1-recursion-compiler under MIT license.
[package]
name = "afs-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afs-derive = { path = "../derive" }
p3-field = { workspace = true }
itertools.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-baby-bear = { workspace = true }
backtrace = { version = "0.3.71", features = ["serde"] }
afs-test-utils = { path = "../test-utils" }
stark-vm = { path = "../vm" }
strum_macros = "0.26.4"
num-bigint = "0.4.6"
num-bigint-dig = "0.8.4"
num-integer = "0.1.46"
num-traits = "0.2.19"
# disable jemalloc to be compatible with afs-starkbackend
snark-verifier-sdk = { workspace = true, optional = true }
zkhash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
rand = "0.8.5"

[features]
default = []
halo2-compiler = ["dep:snark-verifier-sdk"]