# Forked from sp1-recursion-compiler under MIT license.
[package]
name = "afs-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
afs-derive = { path = "../derive" }
ax-sdk = { path = "../sdk" }
stark-vm = { path = "../vm" }
tracing.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
backtrace = { version = "0.3.71", features = ["serde"] }
strum_macros = "0.26.4"
num-bigint-dig.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
# disable jemalloc to be compatible with afs-starkbackend
snark-verifier-sdk = { workspace = true, optional = true }
zkhash = { workspace = true }
metrics = { workspace = true, optional = true }
cfg-if = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
hex = "0.4.3"
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
rand = "0.8.5"
afs-compiler = { path = ".", features = ["sdk"] }

[features]
default = []
halo2-compiler = ["dep:snark-verifier-sdk"]
parallel = ["stark-vm/parallel"]
sdk = ["stark-vm/sdk"]
bench-metrics = ["sdk", "dep:metrics", "stark-vm/bench-metrics"]
