[package]
name = "logical-interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "User-facing logical interface for AFS."

[dependencies]
afs-page = { path = "../db/page" }
alloy-primitives = { version = "0.7.5", features = ["getrandom"] }
bincode = "1.3.3"
color-eyre = "0.6.3"
hex = "0.4.3"
itertools = "0.13.0"
serde = "1.0.203"
serde_derive = "1.0.203"

[dev-dependencies]
serde_json = "1.0.117"
