[package]
name = "poseidon2-air"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-util = { workspace = true }
zkhash = { workspace = true }
rand = "0.8"

afs-primitives = { path = "../primitives" }
afs-stark-backend = { path = "../stark-backend", default-features = false }
afs-derive = { path = "../derive" }
afs-test-utils = { path = "../test-utils" }
lazy_static = "1.5.0"
itertools = "0.13.0"

[dev-dependencies]
p3-uni-stark = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-symmetric = { workspace = true }
test-case = "3.3.1"
rand_xoshiro = "0.6.0"
ark-ff = { version = "^0.4.0", default-features = false }

[features]
default = []
parallel = ["afs-stark-backend/parallel"]
