[package]
name = "afs-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Library of plonky3 primitives for general purpose use in other ZK circuits."

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true }
p3-keccak = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
rand = "0.8"
derive-new = "0.6.0"

afs-stark-backend = { path = "../stark-backend", default-features = false }
afs-derive = { path = "../derive" }
afs-test-utils = { path = "../test-utils" }
parking_lot = "0.12.2"
itertools = "0.13.0"
getset = "0.1.2"

[dev-dependencies]
p3-uni-stark = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
test-case = "3.3.1"

[features]
default = []
test-traits = ["p3-baby-bear"]            # traits for testing
parallel = ["afs-stark-backend/parallel"]
