[package]
name = "afs-recursion"
version = "0.1.0"
edition = "2021"

[dependencies]
afs-stark-backend = { path = "../stark-backend" }
afs-compiler = { path = "../compiler" }
afs-test-utils = { path = "../test-utils" }
stark-vm = { path = "../vm" }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-uni-stark = { workspace = true }
itertools = "0.12.1"
rand = "0.8.5"

[dev-dependencies]
afs-primitives = { path = "../primitives" }

[features]
default = []
parallel = ["afs-stark-backend/parallel"]
