[package]
name = "afs-recursion"
version = "0.1.0"
edition = "2021"

[dependencies]
afs-stark-backend = { path = "../stark-backend" }
afs-compiler = { path = "../compiler" }
afs-test-utils = { path = "../test-utils" }
afs-derive = { path = "../derive" }
stark-vm = { path = "../vm" }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-baby-bear = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-uni-stark = { workspace = true }
itertools.workspace = true

rand = "0.8.5"
serde = { workspace = true }
snark-verifier-sdk = { workspace = true, features = ["loader_evm", "revm"], optional = true }
once_cell = { workspace = true, optional = true }
zkhash = { workspace = true }
ff = { version = "0.13", features = ["derive", "derive_bits"] }
serde_json = "1.0.121"
tracing = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
afs-primitives = { path = "../primitives" }

[features]
default = []
parallel = ["afs-stark-backend/parallel"]
static-verifier = ["afs-compiler/halo2-compiler", "dep:snark-verifier-sdk", "dep:once_cell"]