[package]
name = "afs-stark-backend"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AFS proof system middleware built on top of Plonky3 backend."

[dependencies]
p3-air = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }

itertools = "0.13.0"
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
    "rc",
] }
tracing = "0.1.37"
derivative = "2.2.0"

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", optional = true }

mimalloc = { version = "0.1.43", optional = true }

[dev-dependencies]
afs-derive = { path = "../derive" }
afs-test-utils = { path = "../test-utils" }

p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-fri = { workspace = true }
p3-baby-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-keccak = { workspace = true }
p3-symmetric = { workspace = true }
p3-mds = { workspace = true }
p3-goldilocks = { workspace = true }

rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
serde_json = "1.0.117"
csv = "1.3.0"
eyre = "0.6.12"

[features]
default = []
parallel = ["p3-maybe-rayon/parallel"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-prof = ["jemalloc", "tikv-jemallocator?/profiling"]
