[package]
name = "axvm-circuit"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "axVM circuits"

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }

ax-poseidon2-air = { workspace = true }
ax-circuit-primitives = { workspace = true }
ax-stark-backend = { workspace = true }
afs-derive = { workspace = true }
ax-sdk = { workspace = true, optional = true }
ax-ecc-primitives = { workspace = true }
axvm-instructions = { workspace = true }

parking_lot.workspace = true
enum-utils = "0.1.1"
strum = { workspace = true }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
num-bigint-dig.workspace = true
num-traits.workspace = true
enum_dispatch.workspace = true
itertools.workspace = true
tracing.workspace = true
strum_macros.workspace = true
derive-new.workspace = true
backtrace.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
hex-literal.workspace = true
once_cell.workspace = true
cfg-if.workspace = true
metrics = { workspace = true, optional = true }
inferno = { workspace = true, optional = true }

[dev-dependencies]
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-symmetric = { workspace = true }
zkhash = { workspace = true }
rand_xoshiro = "0.6.0"
ark-ff = { version = "^0.4.0", default-features = false }
ax-sdk = { workspace = true }
test-case.workspace = true
test-log.workspace = true
lazy_static.workspace = true
axvm-circuit = { workspace = true, features = ["sdk"] }

[features]
default = ["parallel", "mimalloc"]
parallel = ["ax-stark-backend/parallel"]
sdk = ["dep:ax-sdk"]
bench-metrics = [
    "sdk",
    "dep:metrics",
    "dep:inferno",
    "ax-stark-backend/bench-metrics",
]
mimalloc = ["ax-stark-backend/mimalloc"]
jemalloc = ["ax-stark-backend/jemalloc"]
jemalloc-prof = ["ax-stark-backend/jemalloc-prof"]
