[package]
name = "axvm-circuit"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "axVM circuits"

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true }
p3-field = { workspace = true }
p3-keccak-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }

ax-poseidon2-air = { workspace = true }
ax-stark-backend = { workspace = true }
ax-circuit-primitives = { workspace = true }
ax-circuit-derive = { workspace = true }
ax-ecc-primitives = { workspace = true }
axvm-ecc = { workspace = true, features = [
    "halo2curves",
] } # TODO: move ecc chips to separate crate
ax-ecc-execution = { workspace = true } # needed for hint_final_exp
axvm-ecc-constants = { workspace = true }
axvm-circuit-derive = { workspace = true }
axvm-instructions = { workspace = true }
ax-stark-sdk = { workspace = true }

parking_lot.workspace = true
enum-utils.workspace = true
strum.workspace = true
tiny-keccak.workspace = true
num-bigint-dig = { workspace = true, features = ["std"] }
num-traits.workspace = true
itertools.workspace = true
tracing.workspace = true
strum_macros.workspace = true
derive-new.workspace = true
derive_more = { workspace = true, features = ["from"] }
backtrace.workspace = true
rand.workspace = true
serde.workspace = true
toml.workspace = true
hex-literal.workspace = true
once_cell.workspace = true
cfg-if.workspace = true
metrics = { workspace = true, optional = true }
inferno = { workspace = true, optional = true }
thiserror.workspace = true
rustc-hash.workspace = true
eyre.workspace = true
derivative.workspace = true
static_assertions.workspace = true
async-trait.workspace = true

[dev-dependencies]
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-symmetric = { workspace = true }
zkhash = { workspace = true }
rand_xoshiro = "0.6.0"
ark-ff = { version = "^0.4.0", default-features = false }
ax-stark-sdk = { workspace = true }
test-case.workspace = true
test-log.workspace = true
lazy_static.workspace = true
axvm-ecc = { workspace = true, features = ["halo2curves"] }
axvm-ecc-constants = { workspace = true }
axvm-circuit = { workspace = true, features = ["test-utils"] }
ax-ecc-primitives = { workspace = true, features = ["test-utils"] }
halo2curves-axiom = { workspace = true }
hex.workspace = true

[features]
default = ["parallel", "mimalloc"]
parallel = ["ax-stark-backend/parallel"]
test-utils = ["axvm-ecc/halo2curves"]
bench-metrics = ["dep:metrics", "dep:inferno", "ax-stark-backend/bench-metrics"]
function-span = []
# performance features:
mimalloc = ["ax-stark-backend/mimalloc"]
jemalloc = ["ax-stark-backend/jemalloc"]
jemalloc-prof = ["ax-stark-backend/jemalloc-prof"]
nightly-features = [
    "p3-keccak-air/nightly-features",
    "ax-stark-sdk/nightly-features",
]
