[package]
name = "openvm-benchmarks-execute"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-benchmarks-utils.workspace = true
cargo-openvm.workspace = true
openvm-circuit.workspace = true
openvm-sdk.workspace = true
openvm-stark-sdk.workspace = true
openvm-transpiler.workspace = true
openvm-rv32im-circuit.workspace = true
openvm-rv32im-transpiler.workspace = true
openvm-keccak256-circuit.workspace = true
openvm-keccak256-transpiler.workspace = true

clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tracing.workspace = true
derive_more = { workspace = true, features = ["from"] }

tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["jemalloc"]
profiling = ["openvm-sdk/profiling"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]

[[bench]]
name = "fibonacci_execute"
harness = false

[[bench]]
name = "regex_execute"
harness = false

[package.metadata.cargo-shear]
ignored = ["derive_more"]
