[package]
name = "openvm-benchmarks-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
openvm-build.workspace = true
openvm-transpiler.workspace = true

cargo_metadata.workspace = true
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

[dev-dependencies]

[features]
default = []
build-binaries = []

[[bin]]
name = "build-elfs"
path = "src/build-elfs.rs"
required-features = ["build-binaries"]
