[package]
name = "ax-circuit-derive"
version.workspace = true
edition.workspace = true
description = "Procedural macros for writing circuits as AIRs."

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = { workspace = true }
