[package]
name = "ax-ecc-primitives"
version = "0.1.0"
edition = "2021"
description = "Elliptic curve cryptography building blocks."

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-baby-bear = { workspace = true }

afs-stark-backend = { workspace = true }
afs-primitives = { workspace = true }
ax-sdk = { workspace = true }

rand.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
tracing.workspace = true
halo2curves-axiom = { git = "https://github.com/axiom-crypto/halo2curves.git" }

[dev-dependencies]
afs-primitives = { path = "../primitives" }
hex-literal = { workspace = true }
sha3 = "0.10.8"

[features]
default = []
parallel = ["afs-stark-backend/parallel"]
