[package]
name = "ax-ecc-primitives"
version = "0.1.0"
edition = "2021"
description = "Elliptic curve cryptography building blocks."

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-baby-bear = { workspace = true }

ax-stark-backend = { workspace = true }
ax-circuit-primitives = { workspace = true }
ax-sdk = { workspace = true }

rand.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
tracing.workspace = true
halo2curves-axiom = { git = "https://github.com/axiom-crypto/halo2curves.git" }

[dev-dependencies]
ax-circuit-primitives = { path = "../primitives" }
hex-literal = { workspace = true }
sha3 = "0.10.8"
lazy_static.workspace = true

[features]
default = []
parallel = ["ax-stark-backend/parallel"]
