[package]
name = "ax-ecc-primitives"
version = "0.1.0"
edition = "2021"
description = "Elliptic curve cryptography building blocks."

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-baby-bear = { workspace = true }

ax-stark-backend = { workspace = true }
ax-circuit-primitives = { workspace = true }
ax-stark-sdk = { workspace = true }
halo2curves-axiom = { workspace = true, optional = true }
ax-ecc-execution = { workspace = true, optional = true }

rand.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
tracing.workspace = true

[dev-dependencies]
ax-circuit-primitives = { workspace = true }
hex-literal = { workspace = true }
sha3 = "0.10.8"
lazy_static.workspace = true
ax-ecc-execution = { workspace = true }
axvm-ecc-constants = { workspace = true }
halo2curves-axiom = { workspace = true }

[features]
default = []
parallel = ["ax-stark-backend/parallel"]
test-utils = ["dep:halo2curves-axiom", "dep:ax-ecc-execution"]
