[package]
name = "ax-circuit-primitives"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Library of plonky3 primitives for general purpose use in other ZK circuits."

[dependencies]
p3-air = { workspace = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true }
p3-keccak = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }

ax-stark-backend = { workspace = true }
afs-derive = { workspace = true }

parking_lot.workspace = true
rand.workspace = true
derive-new.workspace = true
itertools.workspace = true
num-bigint-dig.workspace = true
num-traits.workspace = true
num-integer.workspace = true
lazy_static.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-uni-stark = { workspace = true }
p3-baby-bear = { workspace = true }
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-goldilocks = { workspace = true }
p3-keccak = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
test-case.workspace = true
ax-sdk = { workspace = true }

[features]
default = ["parallel"]
test-traits = ["p3-baby-bear"]           # traits for testing
parallel = ["ax-stark-backend/parallel"]
