[package]
name = "axvm-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axvm-algebra-circuit = { workspace = true }
axvm-algebra-transpiler = { workspace = true }
axvm-bigint-circuit = { workspace = true }
axvm-bigint-transpiler = { workspace = true }
axvm-build = { workspace = true }
axvm-ecc-circuit = { workspace = true }
axvm-ecc-transpiler = { workspace = true }
axvm-keccak256-circuit = { workspace = true }
axvm-keccak256-transpiler = { workspace = true }
axvm-pairing-circuit = { workspace = true }
axvm-pairing-transpiler = { workspace = true }
axvm-native-circuit = { workspace = true }
axvm-native-compiler = { workspace = true }
axvm-native-recursion = { workspace = true, features = ["static-verifier"] }
axvm-rv32im-circuit = { workspace = true }
axvm-rv32im-transpiler = { workspace = true }
axvm-transpiler = { workspace = true }
ax-stark-backend = { workspace = true }
ax-stark-sdk = { workspace = true }
axvm-circuit = { workspace = true }
axvm = { workspace = true }

bincode = { workspace = true, features = ["serde", "std"] }
bon = { workspace = true }
bson = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
static_assertions.workspace = true
eyre.workspace = true
async-trait.workspace = true
metrics.workspace = true
tracing.workspace = true
itertools.workspace = true

[dev-dependencies]
axvm-sdk-example-test = { path = "example" }

[features]
default = ["parallel"]
bench-metrics = ["axvm-native-recursion/bench-metrics"]
parallel = ["axvm-circuit/parallel"]
test-utils = ["axvm-circuit/test-utils"]
