[package]
name = "cargo-openvm"
description = "OpenVM CLI tools"
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "git2",
] }

[dependencies]
openvm-build = { workspace = true }
openvm-transpiler = { workspace = true }
openvm-circuit = { workspace = true }
openvm-keccak256-circuit = { workspace = true }
openvm-native-recursion = { workspace = true, features = ["static-verifier"] }
openvm-rv32im-transpiler = { workspace = true }
openvm-sdk = { workspace = true }
openvm-keccak256-transpiler = { workspace = true }
openvm-stark-sdk.workspace = true

aws-sdk-s3 = "1.78"
aws-config = "1.5"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
cargo_metadata = "0.18.1"
clap = { version = "4.5.9", features = ["derive", "env"] }
eyre.workspace = true
tracing.workspace = true
dirs = "5.0"
serde.workspace = true
rand = "0.8"
serde_json.workspace = true
yansi = "1.0.1"
hex = "0.4.3"
anstyle = "1.0.8"
target-lexicon = "0.12.15"
tempfile = "3.10.1"
rustc-demangle = "0.1.18"
goblin = "0.8"
capstone = "0.11.0"
regex = "1.5.4"
prettytable-rs = "0.10"
textwrap = "0.16.0"
ctrlc = "3.4.2"
toml = { workspace = true }

[features]
default = ["parallel", "mimalloc"]
bench-metrics = ["openvm-sdk/bench-metrics"]
parallel = ["openvm-circuit/parallel"]
mimalloc = ["openvm-circuit/mimalloc"]
jemalloc = ["openvm-circuit/jemalloc"]
jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
nightly-features = ["openvm-circuit/nightly-features"]
